@@ -17,16 +17,21 @@
 package org.graylog.storage.elasticsearch7;
 
 import com.codahale.metrics.Timer;
+import com.google.common.collect.Iterables;
 import org.graylog.storage.elasticsearch7.mapping.FieldMappingApi;
+import org.graylog2.Configuration;
 import org.graylog2.indexer.IndexNotFoundException;
 import org.graylog2.indexer.fieldtypes.FieldTypeDTO;
 import org.graylog2.indexer.fieldtypes.IndexFieldTypePollerAdapter;
+import org.graylog2.indexer.fieldtypes.streamfiltered.esadapters.StreamsForFieldRetriever;
 import org.graylog2.shared.utilities.ExceptionUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import javax.inject.Inject;
 import java.util.Collections;
+import java.util.HashSet;
+import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
@@ -35,10 +40,16 @@ import java.util.stream.Collectors;
 public class IndexFieldTypePollerAdapterES7 implements IndexFieldTypePollerAdapter {
     private static final Logger LOG = LoggerFactory.getLogger(IndexFieldTypePollerAdapterES7.class);
     private final FieldMappingApi fieldMappingApi;
+    private final boolean streamAwareFieldTypes;
+    private final StreamsForFieldRetriever streamsForFieldRetriever;
 
     @Inject
-    public IndexFieldTypePollerAdapterES7(FieldMappingApi fieldMappingApi) {
+    public IndexFieldTypePollerAdapterES7(final FieldMappingApi fieldMappingApi,
+                                          final Configuration configuration,
+                                          final StreamsForFieldRetriever streamsForFieldRetriever) {
         this.fieldMappingApi = fieldMappingApi;
+        this.streamAwareFieldTypes = configuration.maintainsStreamAwareFieldTypes();
+        this.streamsForFieldRetriever = streamsForFieldRetriever;
     }
 
     @Override
@@ -55,19 +66,50 @@ public class IndexFieldTypePollerAdapterES7 implements IndexFieldTypePollerAdapt
             return Optional.empty();
         }
 
-        return Optional.of(fieldTypes.entrySet()
+        final Map<String, FieldMappingApi.FieldMapping> filteredFieldTypes = fieldTypes.entrySet()
                 .stream()
                 // The "type" value is empty if we deal with a nested data type
                 // TODO: Figure out how to handle nested fields, for now we only support the top-level fields
                 .filter(field -> !field.getValue().type().isEmpty())
-                .map(field -> {
-                    final FieldMappingApi.FieldMapping mapping = field.getValue();
-                    final Boolean fielddata = mapping.fielddata().orElse(false);
-                    return FieldTypeDTO.create(field.getKey(), mapping.type(), fielddata
-                            ? Collections.singleton(FieldTypeDTO.Properties.FIELDDATA)
-                            : Collections.emptySet());
-                })
-                .collect(Collectors.toSet())
-        );
+                .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue));
+
+        if (!streamAwareFieldTypes) {
+            return Optional.of(filteredFieldTypes.entrySet()
+                    .stream()
+                    .map(field -> fromFieldNameAndMapping(field.getKey(), field.getValue())
+                            .streams(Set.of())
+                            .build())
+                    .collect(Collectors.toSet()));
+        } else {
+            Set<FieldTypeDTO> result = new HashSet<>();
+            final Iterable<List<Map.Entry<String, FieldMappingApi.FieldMapping>>> partitioned = Iterables.partition(filteredFieldTypes.entrySet(), MAX_SEARCHES_PER_MULTI_SEARCH);
+            for (var batch : partitioned) {
+                final Map<String, Set<String>> streams = streamsForFieldRetriever.getStreams(batch.stream().map(Map.Entry::getKey).collect(Collectors.toList()), indexName);
+                batch.stream()
+                        .map(entry -> fromFieldNameAndMapping(entry.getKey(), entry.getValue())
+                                .streams(streams.get(entry.getKey()))
+                                .build()
+                        )
+                        .forEach(result::add);
+
+            }
+            return Optional.of(result);
+        }
+
+    }
+
+    private FieldTypeDTO.Builder fromFieldNameAndMapping(final String fieldName, final FieldMappingApi.FieldMapping mapping) {
+        final Boolean fieldData = mapping.fielddata().orElse(false);
+        return FieldTypeDTO.builder()
+                .fieldName(fieldName)
+                .physicalType(mapping.type())
+                .properties(fieldData ?
+                        Collections.singleton(FieldTypeDTO.Properties.FIELDDATA)
+                        : Set.of());
+    }
+
+    @Override
+    public boolean maintainsStreamBasedFieldLists() {
+        return streamAwareFieldTypes;
     }
 }
